--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
   <title>Document</title>
   <link rel="stylesheet" href="CSS/normalize.css">
   <link rel="stylesheet" href="CSS/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+  <h1>heading 1</h1>
+  <h2>heading 2</h2>
+  <h3>heading 3</h3>
+  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat unde aut labore nam eum, ipsam harum necessitatibus enim expedita numquam?</p>
 </body>
 </html>
